argo/appproject-clusterresourceblacklist/.chainsaw-test/bad-no-blacklist.yaml
apiVersion: argoproj.io/v1alpha1
kind: AppProject
metadata:
  name: badappproj04
spec:
  description: Test Project
  destinations:
  - namespace: default
    server: https://kubernetes.default.svc
