argo/appproject-clusterresourceblacklist/.chainsaw-test/good.yaml
apiVersion: argoproj.io/v1alpha1
kind: AppProject
metadata:
  name: goodappproj
spec:
  description: Test Project
  destinations:
  - namespace: default
    server: https://kubernetes.default.svc
  clusterResourceBlacklist:
  - group: '*'
    kind: '*'
