argo/appproject-clusterresourceblacklist/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: appproject-clusterresourceblacklist
spec:
  steps:
  - name: step-01
    try:
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - script:
        content: |
            sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../appproject-clusterresourceblacklist.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-02-assert-1.yaml
  - name: step-03
    try:
    - apply:
        file: good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-both-wildcard.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-group-wildcard.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-kind-wildcard.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-no-blacklist.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: appproject-clusterresourceblacklist
